2007-10-29  Matthieu Nottale  <nottale@gostai.com>

	Buxgfix on aibo.
	* src/uconnection.cc: Move misplaced #endif.

2007-10-26  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Don't use Boost.Filesystem in the kernel.
	libboost_filesystem is not available on Aibo, so we can't use it in
	the kernel.
	* include/kernel/userver.hh,
	* src/Makefile.am,
	* src/userver.cc: Revert the changes done at r1828 and r1838.

2007-10-26  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Link with boost_filesystem.
	* src/Makefile.am (LIBS): Add a `-lboost_filesystem' (quick hack).

2007-10-26  Thomas Moulard  <thomas@moulard.net>

	Fix merge.
	* .automerge: Update to last sync revision.
	* src/parser/bison/ugrammar.y: Remove useless comments.
	* src/uvalue.cc: Rename add_ulist into utlist_append
        and add_ulists into ulist_concat.

2007-10-26  Thomas Moulard  <thomas@moulard.net>

	merge -r 1625:1828 https://svn.gostai.com/svn/kernel1/branches/1.5
	2007-10-08  Benoit Sigoure  <tsuna@lrde.epita.fr>
	Bump the version number.
	* configure.ac: Adjust the version number and email address for bug
	reports.

	2007-10-02  Thomas Moulard  <thomas@moulard.net>
	Remove network.
        The network is now plugged through an externals.
        Network's new location is modules/network.

	* src/Makefile.am: Remove network.
	* src/network/bsdnet/bsdnet.mk: Remove.
	* src/network/bsdnet/connection.cc: Remove.
	* src/network/bsdnet/connection.hh: Remove.
	* src/network/bsdnet/network.cc: Remove.
	* src/network/bsdnet/network.hh: Remove.
	* src/network/bsdnet: Remove.
	* src/network: Remove.

	2007-10-02  Thomas Moulard  <thomas@moulard.net>
	Fix list concatenation.
	* src/uvalue.cc: Here.

	2007-10-02  mefyl  <mefyl@lrde.epita.fr>
	Do not accept '<<' and '>>' in the parser yet.
	* src/parser/bison/ugrammar.y: Here.

	2007-10-02  Thomas Moulard  <thomas@moulard.net>
	Fix list concatenation.
	* src/uvalue.cc: Fix concatenation of two lists.

2007-10-25  mefyl  <mefyl@lrde.epita.fr>

	Use boost to handle paths.